<resources>
    <string name="app_name">Anime Alarm</string>


    <string name="timer">Timer</string>
    <string name="setting">Setting</string>
    <string name="quick_alarm">Quick Alarm</string>
    <string name="add">Add</string>
    <string name="description_btn_add">Tap here to create an alarm</string>
    <string name="new_alarm">New Alarm</string>
    <string name="edit_alarm">Edit Alarm</string>
    <string name="schedule">Schedule </string>
    <string name="message_placeholder">Enter an alarm message</string>
    <string name="default_text">Default</string>
    <string name="save">Save</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="schedule_for">Schedule for %1$s</string>
    <string name="stop">Stop</string>
    <string name="this_string">This</string>
    <string name="alarm">Alarm</string>
    <string name="snooze">Snooze</string>
    <string name="snooze_for_5_minutes">Snooze for 5 minutes</string>


    <string name="noDescription">No description</string>
    <string name="title_select_date">Select a future date for this alarm</string>

    <string name="timer_stopwatch"><![CDATA[Timer & Stopwatch]]></string>
    <string name="stopwatch">Stopwatch</string>
    <string name="short_stopwatch">Stopwatch</string>
    <string name="start">START</string>
    <string name="lap">LAP</string>
    <string name="_5m">5m</string>
    <string name="_10m">10m</string>
    <string name="_15m">15m</string>
    <string name="_30m">30m</string>
    <string name="_45m">45m</string>
    <string name="reset">RESET</string>
    <string name="index">Index</string>
    <string name="time">Time</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>

    <string name="character">Character</string>

    <string name="change_language">Language changed</string>
    <string name="change_theme">Theme changed</string>

    <string name="pause">PAUSE</string>



    <string name="discard_change">Discard changes?</string>
    <string name="discard_change_message">Are you sure you want to exit?</string>
    <string name="delete_alarm">Delete Alarm</string>
    <string name="delete_alarm_message">Are you sure to delete this alarm?</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    
    <string name="select_tone">Choose Sound</string>
    <string name="default_tone">Default Tone</string>
    <string name="clock_tone">Clock Tone</string>
    <string name="ring_tone">Ring Tone</string>
    <string name="school_tone">School Tone</string>
    <string name="trumpet_tone">Trumpet Tone</string>

    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="everyday">Everyday</string>
    <string name="once">Once</string>
    <string name="create">Create my own</string>

    <string name="repeat">Repeat</string>
    <string name="message">Message</string>
    <string name="sound">Sound</string>
    <string name="never">Never</string>
    <string name="default_character">Default Character</string>
    
    <string name="timer_running">Timer is running</string>
    <string name="time_left">Time left: </string>
    
    <string name="stopwatch_running">Stopwatch is running</string>
    <string name="policy">Policy</string>
    <string name="feed_back">Feedback</string>
    <string name="share_app">Share App</string>
    <string name="developing">This feature is under development.</string>
    <string name="no_alarm_choosen">Please select time</string>
    <string name="Repeat">Repeat</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    
    <string name="feedback_for_us">Feedback for us</string>
    <string name="enter_feedback">Enter your feedback</string>
    <string name="send">Send</string>
    <string name="select_star">Please select number of stars</string>
    <string name="thank_feedback">Thank you for your feedback</string>

    <string name="this_action_may_contain_ads">This action may contain ads..</string>
    <string name= "continue_text">Continue</string>

    <string name="exit">Press again to exit </string>

    <string name="rate_5_stars">Rate 5 stars</string>
    <string name="share_to_your_friends">Share to your friends</string>
    <string name="term">Term of use</string>
    <string name="cmp_setting">Cmp setting</string>
    <string name="max_size_feedback_text" translatable="false">%d/500</string>
    <string name="rate_us">Rate Us</string>

</resources>