<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.timer.TimerFragment">

    <include
        android:id="@+id/timer_toolbar"
        layout="@layout/toolbar_common" />

    <!-- Timer display -->

    <!-- Hàng nhãn: Hours / Minutes / Seconds -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Hours"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Minutes"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Seconds"
            android:textSize="@dimen/sp_18" />
    </LinearLayout>

    <!-- Hàng 3 NumberPicker -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingHorizontal="@dimen/sp_16"
        android:orientation="horizontal">

        <NumberPicker
            android:id="@+id/picker_hours"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:theme="@style/NumberPickerDark" />

        <NumberPicker
            android:id="@+id/picker_minutes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:theme="@style/NumberPickerDark" />

        <NumberPicker
            android:id="@+id/picker_seconds"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:theme="@style/NumberPickerDark" />
    </LinearLayout>


    <!-- Quick buttons -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn5"
            style="@style/btnNormal"
            android:backgroundTint="@color/primary"
            android:layout_weight="1"
            android:text="@string/_5m" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn10"
            style="@style/btnNormal"
            android:backgroundTint="@color/primary"
            android:layout_weight="1"
            android:text="@string/_10m" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn15"
            android:backgroundTint="@color/primary"
            style="@style/btnNormal"
            android:layout_weight="1"
            android:text="@string/_15m" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn30"
            style="@style/btnNormal"
            android:backgroundTint="@color/primary"
            android:layout_weight="1"
            android:text="@string/_30m" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn45"
            style="@style/btnNormal"
            android:layout_weight="1"
            android:backgroundTint="@color/primary"
            android:text="@string/_45m" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/dp_36">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_reset_timer"
            style="@style/btnCircle"
            android:text="@string/reset" />

        <Space
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_start_timer"
            style="@style/btnCircle"
            android:text="@string/start" />

    </LinearLayout>


</LinearLayout>
