<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.quickalarm.QuickAlarmFragment">

    <include
        android:id="@+id/quick_toolbar"
        layout="@layout/toolbar_common" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/dp_16"
            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn5m"
                style="@style/btnNormal"
                android:layout_weight="1"
                android:text="@string/_5m" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn15m"
                style="@style/btnNormal"
                android:layout_weight="1"
                android:text="@string/_15m" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn30m"
                style="@style/btnNormal"
                android:layout_weight="1"
                android:text="@string/_30m" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn45m"
                style="@style/btnNormal"
                android:layout_weight="1"
                android:text="@string/_45m" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/dp_16">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn1h"
                style="@style/btnNormal"
                android:layout_weight="1"
                android:text="1h" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn6h"
                style="@style/btnNormal"
                android:layout_weight="1"
                android:text="6h" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn12h"
                style="@style/btnNormal"
                android:layout_weight="1"
                android:text="12h" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn18h"
                style="@style/btnNormal"
                android:layout_weight="1"
                android:text="18h" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn24h"
                style="@style/btnNormal"
                android:layout_weight="1"
                android:text="24h" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/dp_32">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_create_my_own"
                style="@style/btnNormal"
                android:backgroundTint="@color/surface"
                android:paddingHorizontal="@dimen/dp_32"
                android:text="@string/create"
                android:textColor="@color/secondary"
                android:textSize="@dimen/sp_18" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>