<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:flow_horizontalAlign="center"
    tools:context=".ui.alarm.NewAlarmFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tool_bar_new_alarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_back"
        app:navigationIconTint="@color/primary">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_semi_bold"
                android:text="@string/new_alarm"
                android:textColor="@color/text"
                android:textSize="@dimen/sp_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/ic_save"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/ic_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/transparent"
                android:padding="16dp"
                android:src="@drawable/ic_save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/primary"
                tools:ignore="ContentDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.MaterialToolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_edit_time"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:backgroundTint="@color/surface"
            app:cardCornerRadius="@dimen/dp_16">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_edit_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/dp_12">

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="88dp"
                    android:text="00:00 AM"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />

                <ImageButton
                    android:id="@+id/btn_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:src="@drawable/ic_edit"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@android:color/white"
                    tools:ignore="ContentDescription" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_dates"
            style="@style/AddAlarmConstraintLayoutStyle"
            android:layout_marginTop="@dimen/dp_24"
            android:paddingBottom="@dimen/dp_24">

            <TextView
                android:id="@+id/repeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:fontFamily="@font/open_sans_semi_bold"
                android:minWidth="@dimen/dp_80"
                android:text="@string/repeat"
                android:textColor="@color/text"
                android:textSize="@dimen/sp_16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/dates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:fontFamily="@font/open_sans_medium"
                android:text="@string/never"
                android:textColor="@color/text"
                android:textSize="@dimen/sp_16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/ic_forward"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ic_forward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/transparent"
                android:contentDescription="@string/noDescription"
                android:src="@drawable/ic_forward"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/text" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_calendar"
            style="@style/AddAlarmConstraintLayoutStyle">

            <TextView
                android:id="@+id/schedule_alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/open_sans_semi_bold"
                android:minWidth="@dimen/dp_80"
                android:text="@string/schedule"
                android:textColor="@color/text"
                android:textSize="@dimen/sp_16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/transparent"
                android:contentDescription="@string/noDescription"
                android:src="@drawable/ic_add_circle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/text" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout style="@style/AddAlarmConstraintLayoutStyle">

            <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/open_sans_semi_bold"
                android:minWidth="@dimen/dp_80"
                android:text="@string/message"
                android:textColor="@color/text"
                android:textSize="@dimen/sp_16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/tf_message"
                style="@style/CustomEditTextStyle"
                android:autofillHints="name"
                android:backgroundTint="@null"
                android:hint="@string/message_placeholder"
                android:inputType="text"
                android:text=""
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/message"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout style="@style/AddAlarmConstraintLayoutStyle">

            <TextView
                android:id="@+id/character"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/open_sans_semi_bold"
                android:minWidth="@dimen/dp_80"
                android:text="@string/character"
                android:textColor="@color/text"
                android:textSize="@dimen/sp_16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/btn_character"
                style="@style/CustomEditTextStyle"
                android:autofillHints="name"
                android:backgroundTint="@null"
                android:text="@string/default_character"
                android:textColor="@color/text"
                android:textSize="18sp"
                app:drawableEndCompat="@drawable/ic_right"
                app:drawableTint="@color/text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/character"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout style="@style/AddAlarmConstraintLayoutStyle">

            <TextView
                android:id="@+id/sound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/open_sans_semi_bold"
                android:minWidth="@dimen/dp_80"
                android:text="@string/sound"
                android:textColor="@color/text"
                android:textSize="@dimen/sp_16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/btn_sound"
                style="@style/CustomEditTextStyle"
                android:autofillHints="name"
                android:backgroundTint="@null"
                android:text="@string/default_tone"
                android:textColor="@color/text"
                android:textSize="18sp"
                app:drawableEndCompat="@drawable/ic_right"
                app:drawableTint="@color/text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/sound"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            style="@style/btnNormal"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="@dimen/dp_80"
            android:layout_marginTop="@dimen/dp_50"
            android:backgroundTint="@color/surface"
            android:text="@string/save"
            android:textColor="@color/primary"
            android:textSize="@dimen/sp_18" />
    </LinearLayout>

</LinearLayout>