<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.alarm.AlarmReceiverActivity">

    <ImageView
        android:id="@+id/bg_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/noDescription"
        android:scaleType="centerCrop"
        android:src="@drawable/img_conan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/overlay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#80000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/layout_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="16.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/noDescription"
            android:src="@drawable/ic_day"
            app:tint="@color/white"

            />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_semi_bold"
            android:text="02:00"
            android:textColor="@color/white"
            android:textSize="60sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="Message"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintTop_toBottomOf="@+id/layout_time" />

    <Space
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/message" />

    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/space">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_stop"
            style="@style/btnChooseDate"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/dp_4"
            android:layout_marginStart="@dimen/dp_4"
            android:text="@string/stop" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_this"
            style="@style/btnChooseDate"
            android:layout_height="80dp"
            android:layout_marginEnd="@dimen/dp_4"
            android:layout_weight="1"
            android:text="@string/this_string" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_alarm"
            style="@style/btnChooseDate"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/dp_4"
            android:text="@string/alarm" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>